# korean-rs

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
examples/: nemo.rs
src/: choseong.rs  constants.rs  jongseong.rs  jungseong.rs  lib.rs  syllable.rs
src/characters/: choseong.rs  jongseong.rs  jungseong.rs  mod.rs
src/compat/: choseong.rs  jongseong.rs  jungseong.rs  mod.rs
src/normal/: choseong.rs  jongseong.rs  jungseong.rs
