[package]
name = "korean"
version = "0.3.0"
authors = [
  "kiwiyou <kiwiyou.dev@gmail.com>",
  "Danuel <public.danuel@gmail.com>"
]
description = "hangul manipulation"
edition = "2018"
documentation = "https://docs.rs/korean"
repository = "https://github.com/danue1/korean-rs"
readme = "README.md"
keywords = []
license = "MIT"
